updated image file path

--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -1,5 +1,6 @@
 <div class="logo">
-    <img src="/images/noun_Tent_2517.svg" alt="tent image for logo" />
+    <img src="../images/noun_Tent_2517.svg" alt="tent image for logo"/>
+    <!-- <img src="../images/noun_Tent_2517.svg" alt="Tent logo" class="logo-icon" /> -->
     <a href="/index.html">Sleep<span class="highlight">Outside</span></a>
 </div>
 
@@ -38,11 +39,3 @@
 
 
 
-
-<!-- <nav>
-    <ul>
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/products/index.html">Products</a></li>
-        <li><a href="/cart/index.html">Cart</a></li>
-    </ul>
-</nav> -->
