updated header file so JS dynamically sets the tent logo

--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -1,9 +1,8 @@
 <div class="logo">
-    <img src="../images/noun_Tent_2517.svg" alt="tent image for logo"/>
-    <!-- <img src="../images/noun_Tent_2517.svg" alt="Tent logo" class="logo-icon" /> -->
+    <!-- remove src; JS will load the correct path -->
+    <img id="logo" alt="tent image for logo" />
     <a href="/index.html">Sleep<span class="highlight">Outside</span></a>
 </div>
-
 
     <div class="cart">
         <a href="../cart/index.html">
